<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fcv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:name="com.ecw.ecollectwaste.LoginFragment" />

    <FrameLayout
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".NavigationFragment"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- HOME -->
                <LinearLayout
                    android:id="@+id/nav_home_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_tiny"
                    android:layout_marginBottom="@dimen/layout_margin_tiny"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/layout_margin_mini"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/nav_icon_size"
                            android:layout_height="@dimen/nav_icon_size"
                            android:src="@drawable/outline_home_24"
                            android:layout_gravity="end|center"
                            android:contentDescription="@string/page_home"
                            app:tint="@color/accent_color" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:layout_gravity="start|center"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/nav_text_size"
                        android:text="@string/page_home" />

                </LinearLayout>

                <!-- SCHEDULE -->
                <LinearLayout
                    android:id="@+id/nav_schedule_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_tiny"
                    android:layout_marginBottom="@dimen/layout_margin_tiny"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/layout_margin_mini"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/nav_icon_size"
                            android:layout_height="@dimen/nav_icon_size"
                            android:src="@drawable/outline_event_24"
                            android:layout_gravity="end|center"
                            android:contentDescription="@string/page_schedule"
                            app:tint="@color/accent_color" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:layout_gravity="start|center"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/nav_text_size"
                        android:text="@string/page_schedule" />

                </LinearLayout>

                <!-- HISTORY -->
                <LinearLayout
                    android:id="@+id/nav_history_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_tiny"
                    android:layout_marginBottom="@dimen/layout_margin_tiny"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/layout_margin_mini"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/nav_icon_size"
                            android:layout_height="@dimen/nav_icon_size"
                            android:src="@drawable/history_48px"
                            android:layout_gravity="end|center"
                            android:contentDescription="@string/page_history"
                            app:tint="@color/accent_color" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:layout_gravity="start|center"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/nav_text_size"
                        android:text="@string/page_history" />

                </LinearLayout>

                <!-- ON-GOING SCHEDULES -->
                <LinearLayout
                    android:id="@+id/nav_on_going_schedules_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_tiny"
                    android:layout_marginBottom="@dimen/layout_margin_tiny"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/layout_margin_mini"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/nav_icon_size"
                            android:layout_height="@dimen/nav_icon_size"
                            android:src="@drawable/pending_48px"
                            android:layout_gravity="end|center"
                            android:contentDescription="@string/page_on_going_schedules"
                            app:tint="@color/accent_color" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:layout_gravity="start|center"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/nav_text_size"
                        android:text="@string/page_on_going_schedules" />

                </LinearLayout>

                <!-- ABOUT US -->
                <LinearLayout
                    android:id="@+id/nav_about_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_tiny"
                    android:layout_marginBottom="@dimen/layout_margin_tiny"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/layout_margin_mini"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/nav_icon_size"
                            android:layout_height="@dimen/nav_icon_size"
                            android:src="@drawable/outline_help_outline_24"
                            android:layout_gravity="end|center"
                            android:contentDescription="@string/page_about"
                            app:tint="@color/accent_color" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:layout_gravity="start|center"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/nav_text_size"
                        android:text="@string/page_about" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/layout_header_button_margin"
            android:paddingTop="@dimen/layout_status_bar_margin"
            android:paddingBottom="@dimen/layout_margin"
            android:paddingEnd="@dimen/layout_header_button_margin"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/menu_back"
                android:layout_width="@dimen/header_button_size"
                android:layout_height="@dimen/header_button_size"
                android:layout_alignParentStart="true"
                android:background="@drawable/baseline_arrow_back_36" />

        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>