<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@drawable/home_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_kv_height"
            android:paddingStart="@dimen/layout_header_button_margin"
            android:paddingTop="@dimen/layout_status_bar_margin"
            android:paddingEnd="@dimen/layout_header_button_margin"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/home_logout"
                android:layout_width="@dimen/header_button_size"
                android:layout_height="@dimen/header_button_size"
                android:layout_alignParentStart="true"
                android:background="@drawable/baseline_arrow_back_36" />

            <Button
                android:id="@+id/home_menu"
                android:layout_width="@dimen/header_button_size"
                android:layout_height="@dimen/header_button_size"
                android:layout_alignParentEnd="true"
                android:background="@drawable/baseline_menu_36" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/white_background"
            android:clipChildren="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/layout_margin"
                        android:text="@string/app_name"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/home_title"
                        android:fontFamily="sans-serif-black"
                        android:letterSpacing="0.05"/>

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="0dp"
                        android:scrollbars="none">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/layout_margin_mini"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/home_client_schedule"
                                android:layout_width="@dimen/home_card_width"
                                android:layout_height="@dimen/home_card_height"
                                android:layout_marginStart="@dimen/layout_margin_mini"
                                app:cardCornerRadius="@dimen/home_card_radius"
                                android:elevation="24dp"
                                android:clickable="true"
                                android:focusable="true">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/schedule_card_background" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/card_overlay" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/layout_margin_mini"
                                    android:layout_gravity="start|bottom"
                                    android:textColor="@color/white"
                                    android:text="Create Schedule" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/home_collector_history"
                                android:layout_width="@dimen/home_card_width"
                                android:layout_height="@dimen/home_card_height"
                                android:layout_marginStart="@dimen/layout_margin_mini"
                                app:cardCornerRadius="@dimen/home_card_radius"
                                android:elevation="24dp"
                                android:clickable="true"
                                android:focusable="true">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/history_card_background" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/card_overlay" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/layout_margin_mini"
                                    android:layout_gravity="start|bottom"
                                    android:textColor="@color/white"
                                    android:text="View History" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/home_user_view_schedules"
                                android:layout_width="@dimen/home_card_width"
                                android:layout_height="@dimen/home_card_height"
                                android:layout_marginStart="@dimen/layout_margin_mini"
                                app:cardCornerRadius="@dimen/home_card_radius"
                                android:elevation="24dp"
                                android:clickable="true"
                                android:focusable="true">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/register_collector_card_background" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/card_overlay" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/layout_margin_mini"
                                    android:layout_gravity="start|bottom"
                                    android:textColor="@color/white"
                                    android:text="On-going Schedules" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/home_user_about"
                                android:layout_width="@dimen/home_card_width"
                                android:layout_height="@dimen/home_card_height"
                                android:layout_marginStart="@dimen/layout_margin_mini"
                                android:layout_marginEnd="@dimen/layout_margin"
                                app:cardCornerRadius="@dimen/home_card_radius"
                                android:elevation="24dp"
                                android:clickable="true"
                                android:focusable="true">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/about_card_background" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/card_overlay" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/layout_margin_mini"
                                    android:layout_gravity="start|bottom"
                                    android:textColor="@color/white"
                                    android:text="About Us" />

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                    </HorizontalScrollView>

                    <LinearLayout
                        android:id="@+id/home_client_schedule_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/layout_margin"
                        android:paddingEnd="@dimen/layout_margin"
                        android:paddingTop="@dimen/layout_margin"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/layout_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-black"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/home_heading"
                                android:text="@string/home_client_schedule_heading" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:text="@string/home_client_schedule_text" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="@dimen/home_supporting_image_height"
                            android:layout_weight="1"
                            android:src="@drawable/home_schedule_supporting" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_collector_schedule_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/layout_margin"
                        android:paddingEnd="@dimen/layout_margin"
                        android:paddingTop="@dimen/layout_margin"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/layout_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-black"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/home_heading"
                                android:text="@string/home_collector_schedule_heading" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:text="@string/home_collector_schedule_text" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="@dimen/home_supporting_image_height"
                            android:layout_weight="1"
                            android:src="@drawable/home_schedule_collector_supporting" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/layout_margin"
                        android:paddingEnd="@dimen/layout_margin"
                        android:paddingBottom="@dimen/layout_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="@dimen/home_supporting_image_height"
                            android:layout_weight="1"
                            android:src="@drawable/ecollectwastelogo" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/layout_margin"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-black"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/home_heading"
                                android:text="@string/home_user_app_heading" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:text="@string/home_user_app_text" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>